@@ -20,9 +20,9 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <serenity.version>2.3.6</serenity.version>
-        <serenity.maven.version>2.3.6</serenity.maven.version>
-        <serenity.cucumber.version>2.3.6</serenity.cucumber.version>
+        <serenity.version>2.3.12</serenity.version>
+        <serenity.maven.version>2.3.12</serenity.maven.version>
+        <serenity.cucumber.version>2.3.12</serenity.cucumber.version>
         <browserstack.local.version>1.0.6</browserstack.local.version>
         <apache.poi.version>4.1.2</apache.poi.version>
 
@@ -33,34 +33,6 @@
 
     </properties>
 
-    <repositories>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>central</id>
-            <name>bintray</name>
-            <url>https://jcenter.bintray.com</url>
-        </repository>
-        <repository>
-            <id>oss-sonatype</id>
-            <name>oss-sonatype</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>central</id>
-            <name>bintray-plugins</name>
-            <url>https://jcenter.bintray.com</url>
-        </pluginRepository>
-    </pluginRepositories>
 
     <dependencies>
 
@@ -91,7 +63,11 @@
             <artifactId>serenity-rest-assured</artifactId>
             <version>${serenity.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-browserstack</artifactId>
+            <version>2.3.12</version>
+        </dependency>
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-cucumber6</artifactId>
@@ -129,7 +105,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.11.3</version>
+            <version>2.8.8</version>
         </dependency>
 
         <dependency>
@@ -182,15 +158,15 @@
                         <artifactId>serenity-single-page-report</artifactId>
                         <version>${serenity.version}</version>
                     </dependency>
-                    <!-- <dependency>
+                    <dependency>
                         <groupId>net.serenity-bdd</groupId>
                         <artifactId>serenity-navigator-report</artifactId>
-                        <version>2.3.8</version>
-                    </dependency>-->
+                        <version>${serenity.version}</version>
+                    </dependency>
                 </dependencies>
                 <configuration>
                     <!--<tags>${tags}</tags>-->
-                    <reports>single-page-html</reports>
+                    <reports>single-page-html,navigator</reports>
                 </configuration>
 
                 <executions>
@@ -289,7 +265,52 @@
                 </plugins>
             </build>
         </profile>
-
+        <profile>
+            <id>SEARCH</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>${maven.failsafe-plugin.version}</version>
+                        <configuration>
+                            <includes>
+                                <include>UK/GOV/BEIS/SCTDB/runners/searchportal/*UIRunner.java</include>
+                            </includes>
+                            <!--<reuseForks>true</reuseForks>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                            <systemPropertyVariables>
+                                <environment>browserstack</environment>
+                                <taskID>MY_TEST_SCHEMA_${surefire.forkNumber}</taskID>
+                            </systemPropertyVariables>-->
+                            <trimStackTrace>false</trimStackTrace>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>ADMIN</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>${maven.failsafe-plugin.version}</version>
+                        <configuration>
+                            <includes>
+                                <include>UK/GOV/BEIS/SCTDB/runners/adminportal/*UIRunner.java</include>
+                            </includes>
+                            <!--<reuseForks>true</reuseForks>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                            <systemPropertyVariables>
+                                <environment>browserstack</environment>
+                                <taskID>MY_TEST_SCHEMA_${surefire.forkNumber}</taskID>
+                            </systemPropertyVariables>-->
+                            <trimStackTrace>false</trimStackTrace>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>API</id>
             <build>
